tests/fixtures/errors/e0301_reg_no_reset.mimz
// expect: E0301
module M {
  clock clk
  reg v: bit = 0
  on rise(clk) {
    v <- 1
  }
}
